# midi-generator

./: .gitignore  LICENSE  README.md
backend/: .gitignore  index.js  midi-converters.js  package-lock.json  package.json  server.js
backend-springboot/: .gitignore  Dockerfile  pom.xml
backend-springboot/src/main/java/com/midigenerator/: MidiGeneratorApplication.java
backend-springboot/src/main/java/com/midigenerator/config/: AppConfig.java  CorsConfig.java  DataInitializer.java  RestTemplateConfig.java  SecurityConfig.java  (+1 more)
backend-springboot/src/main/resources/: application.properties
backend-springboot/src/main/resources/db/migration/: V2__add_source_column.sql
backend-springboot/src/test/java/com/midigenerator/: BaseIntegrationTest.java
backend-springboot/src/test/java/resources/: application-test.properties
backend/data/: example_midi.txt  rules.txt
backend/src/: app.js
backend/src/controllers/: midiController.js
backend/src/middleware/: errorHandler.js  upload.js
backend/src/routes/: midiRoutes.js
backend/src/utils/: enhanced-prompt-builder.js  midiToText.js  midiValidator.js  textToMidi.js  timeSignatureHelper.js
backend/src/utils/shared/: utils.js
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/public/vst/: MidiGenerator.vst3.rar
frontend/src/: App.jsx
frontend/src/Components/: AuthModal.jsx  ChatBot.jsx  EmailVerificationPage.jsx  MidiToTextConverter.jsx  PricingPage.jsx  ResetPasswordPage.jsx  TextMidiConverter.jsx  UserDashboard.jsx
frontend/src/services/: api.js  authService.js  axiosConfig.js  serverStatusService.js
frontend/src/utils/: errorUtils.js  nodeWakeUp.js
vst/: .gitignore  CMakeLists.txt
vst/source/: APIClient.cpp  APIClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+71 files in other folders)
